# tz_resume

./: .gitignore  Makefile  README.md  TODO.md  backend.Dockerfile  docker-compose.yml  example.env  pyproject.toml
app/: dependency.py  main.py  settings.py
app/infrastructure/database/: __init__.py  accessor.py
app/migrations/: env.py
app/migrations/versions/: c4f55e671379_initial_migrations.py
app/resume/: handlers.py  models.py  repository.py  schema.py  service.py
app/utils/: file.py
