[tool.poetry]
name = "resume-add"
version = "0.1.0"
description = ""
authors = ["Vladimir Lisicyn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.1"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
